<resources>
    <string name="app_name">QuizinApp</string>
    <string name="sampleText">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don\'t look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn\'t anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.</string>
    <string name="categories">Categories</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="single_player">Single Player</string>
    <string name="multi_player">Multi Player</string>
    <string name="_7_seconds">7 Seconds</string>
    <string name="_15_seconds">15 Seconds</string>
    <string name="_20_seconds">20 Seconds</string>
    <string name="selected">Selected</string>
    <string name="short_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s</string>
    <string name="sample_question">What will you do if you ________ the history exam?</string>
    <string name="sign_up">Sign Up</string>
    <string name="signup_intro_text">Sign Up with your email address, username and password or with Google to get started</string>
    <string name="sign_in_intro_text">Sign In with your email address and password or with Google to continue</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up_app_sub_title">Sign Up and enjoy thousands of quizzes for FREE</string>
    <string name="sign_in_app_sub_title">Sign In and enjoy thousands of quizzes for FREE</string>
    <string name="sign_in">Sign In</string>
    <string name="or_sign_up_using_google">Or sign up using google</string>
    <string name="or_sign_in_using_google">Or sign in using Google</string>
    <string name="sign_up_with_google">Sign Up with Google</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="do_not_have_account">Don\'t have an account?Sign Up</string>
    <string name="already_have_account">Already have an account?login here</string>
    <string name="category">Category</string>
    <string name="latest_quizzes">Latest Quizzes</string>
    <string name="play">Play</string>
    <string name="quiz">Quiz</string>
    <string name="done">Done</string>
    <string name="congratulations">Congratulations!</string>
    <string name="enjoy_thousands_of_quizzes_with_quizin_app">Enjoy thousands of quizzes with Quizin App</string>
    <string name="loading">Loading…</string>
    <string name="default_quiz_result_message">You have completed this quiz with GREAT result</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="next">Next</string>
    <string name="confirm">Confirm</string>
    <string name="beginner">Beginner</string>
    <string name="invite">Invite</string>
    <string name="full_name">Full name</string>
    <string name="quiz_settings">Quiz Settings</string>
    <string name="difficulty">Difficulty</string>
    <string name="easy_trophies_amount">+2</string>
    <string name="normal_trophies_amount">+4</string>
    <string name="hard_trophies_amount">+7</string>
    <string name="_7_seconds__trophies_amount">+7</string>
    <string name="_15_seconds_trophies_amount">+4</string>
    <string name="_20_seconds_trophies_amount">+2</string>
    <string name="start_quiz">Start Quiz!</string>
    <string name="results">results :</string>
    <string name="sign_up_to_get_started">Sign Up to get started</string>
    <string name="go_up">Go Up!</string>
    <string name="level_up">LEVEL UP!</string>
    <string name="exp_784_1000">Exp 784/1000</string>
    <string name="_187_exp">+ 187 Exp</string>
    <string name="shop">Shop</string>
    <string name="close">Close</string>
</resources>