<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#241c5c"
    android:fitsSystemWindows="true"
    android:padding="@dimen/_14sdp"
    android:theme="@style/AppThemeWithoutFont"
    tools:context=".ui.fragments.quiz_result.QuizResultFragment">


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/quiz_result_animation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_5sdp"
        android:background="@drawable/explore_bg_shape"
        app:layout_constraintDimensionRatio="16:12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="false" />


    <Button
        android:id="@+id/quiz_result_done_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:fontFamily="@font/varela_round"
        android:text="@string/done"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView19" />

    <TextView
        android:id="@+id/quiz_result_title_Tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/congratulations"
        android:textSize="@dimen/_24ssp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/quiz_result_animation"
        app:layout_constraintEnd_toEndOf="@+id/quiz_result_animation"
        app:layout_constraintStart_toStartOf="@+id/quiz_result_animation"
        app:layout_constraintTop_toTopOf="@+id/quiz_result_animation"
        app:layout_constraintVertical_bias="0.958" />

    <TextView
        android:id="@+id/quiz_result_message_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/varela_round"
        android:gravity="center"
        android:text="@string/default_quiz_result_message"
        android:textSize="@dimen/_17ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/quiz_result_overall_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_result_animation" />


    <!-- wrong color : #DC0839 -->
    <TextView
        android:id="@+id/quiz_result_overall_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/varela_round"
        android:gravity="center"
        android:lines="1"
        android:text="98% Overall"
        android:textColor="@color/great_result"
        android:textSize="@dimen/_33ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView37"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_result_message_tv" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/varela_round"
        android:text="@string/results"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView8"
        app:layout_constraintEnd_toStartOf="@+id/guideline42"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_result_overall_tv" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/trophy"
        app:layout_constraintBottom_toTopOf="@+id/imageView9"
        app:layout_constraintDimensionRatio="3:1"
        app:layout_constraintEnd_toStartOf="@+id/guideline42"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView37" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/correct"
        app:layout_constraintBottom_toTopOf="@+id/imageView17"
        app:layout_constraintDimensionRatio="3:1"
        app:layout_constraintEnd_toStartOf="@+id/guideline42"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="1dp"
        android:src="@drawable/wrong"
        app:layout_constraintBottom_toTopOf="@+id/imageView19"
        app:layout_constraintDimensionRatio="3:1"
        app:layout_constraintEnd_toStartOf="@+id/guideline42"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/quiz_result_trophies_tv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/fredoka_medium"
        android:gravity="center"
        android:text="13"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline41"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline42"
        app:layout_constraintTop_toTopOf="@+id/imageView8" />

    <TextView
        android:id="@+id/quiz_result_correct_answers_tv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/fredoka_medium"
        android:gravity="center"
        android:text="6"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline41"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline42"
        app:layout_constraintTop_toTopOf="@+id/imageView9" />

    <TextView
        android:id="@+id/quiz_result_wrong_answers_tv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/fredoka_medium"
        android:gravity="center"
        android:text="1"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline41"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline42"
        app:layout_constraintTop_toTopOf="@+id/imageView17" />



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <TextView
        android:id="@+id/quiz_result_user_collected_exp_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fredoka_one"
        android:gravity="center"
        android:text="@string/_187_exp"
        android:textColor="@color/great_result"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toBottomOf="@+id/profile_circularProgressBar"
        app:layout_constraintEnd_toEndOf="@+id/quiz_result_user_exp_tv"
        app:layout_constraintStart_toStartOf="@+id/quiz_result_user_exp_tv"
        app:layout_constraintTop_toBottomOf="@+id/quiz_result_user_exp_tv" />

    <com.mikhaellopez.circularprogressbar.CircularProgressBar
        android:id="@+id/profile_circularProgressBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cpb_background_progressbar_color="@android:color/transparent"
        app:cpb_background_progressbar_width="0dp"
        app:cpb_progress="0"
        app:cpb_progress_direction="to_right"
        app:cpb_progress_max="1000"
        app:cpb_progressbar_color="#FF8F00"
        app:cpb_progressbar_color_end="#460DB3"
        app:cpb_progressbar_color_start="#B80FF6"
        app:cpb_progressbar_width="@dimen/_5sdp"
        app:cpb_round_border="true"
        app:layout_constraintBottom_toBottomOf="@+id/quiz_result_gold_tv"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="@+id/guideline41"
        app:layout_constraintTop_toTopOf="@+id/quiz_result_trophies_tv"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/quiz_result_user_level_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/varela_round"
        android:padding="@dimen/_2sdp"
        android:text="Level 18"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/quiz_result_user_exp_tv"
        app:layout_constraintEnd_toEndOf="@+id/profile_circularProgressBar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/profile_circularProgressBar"
        app:layout_constraintTop_toTopOf="@+id/profile_circularProgressBar"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/quiz_result_user_exp_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/varela_round"
        android:padding="@dimen/_2sdp"
        android:text="@string/exp_784_1000"
        android:textSize="@dimen/_11ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/quiz_result_user_collected_exp_tv"
        app:layout_constraintEnd_toEndOf="@id/profile_circularProgressBar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/profile_circularProgressBar"
        app:layout_constraintTop_toBottomOf="@+id/quiz_result_user_level_tv" />

    <TextView
        android:id="@+id/quiz_result_user_level_up_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/level_up"
        android:textColor="@color/great_result"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/profile_circularProgressBar"
        app:layout_constraintEnd_toEndOf="@+id/profile_circularProgressBar"
        app:layout_constraintStart_toStartOf="@+id/profile_circularProgressBar"
        app:layout_constraintTop_toBottomOf="@+id/quiz_result_user_collected_exp_tv" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/gold_coin"
        app:layout_constraintBottom_toTopOf="@+id/quiz_result_done_btn"
        app:layout_constraintDimensionRatio="3:1"
        app:layout_constraintEnd_toStartOf="@+id/guideline42"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView17" />

    <TextView
        android:id="@+id/quiz_result_gold_tv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/fredoka_medium"
        android:gravity="center"
        android:text="206"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView19"
        app:layout_constraintEnd_toStartOf="@+id/guideline41"
        app:layout_constraintStart_toStartOf="@+id/guideline42"
        app:layout_constraintTop_toTopOf="@+id/imageView19" />


</androidx.constraintlayout.widget.ConstraintLayout>