<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/_16sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginVertical="@dimen/_6sdp"
            app:cardCornerRadius="@dimen/_16sdp"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/quiz_item_bg_image"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/orange_item" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/quiz_item_play_btn"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:text="@string/play"
                    android:textColor="@color/md_theme_light_onSecondaryContainer"
                    app:icon="@drawable/ic_play_24dp"
                    app:iconGravity="textStart"
                    app:iconTint="@color/md_theme_light_onSecondaryContainer"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio=""
                    app:layout_constraintEnd_toStartOf="@+id/guideline14"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/guideline7"
                    app:layout_constraintTop_toBottomOf="@+id/quiz_item_title_tv"
                    app:rippleColor="@color/md_theme_light_onBackground" />

                <TextView
                    android:id="@+id/quiz_item_title_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/quiz"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_33ssp"
                    app:layout_constraintBottom_toTopOf="@+id/quiz_item_play_btn"
                    app:layout_constraintEnd_toEndOf="@+id/quiz_item_play_btn"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/quiz_item_play_btn"
                    app:layout_constraintTop_toBottomOf="@+id/quiz_item_name" />

                <TextView
                    android:id="@+id/quiz_item_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_16ssp"
                    app:layout_constraintBottom_toTopOf="@+id/quiz_item_title_tv"
                    app:layout_constraintEnd_toEndOf="@+id/quiz_item_title_tv"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/quiz_item_title_tv"
                    app:layout_constraintTop_toBottomOf="@+id/quiz_item_logo" />

                <ImageView
                    android:id="@+id/quiz_item_logo"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:layout_marginEnd="@dimen/_6sdp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toTopOf="@+id/quiz_item_name"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/guideline2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ball" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.58" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.12" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.88" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>